# NotVim-Editor

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: c-cpp.yml
src/: TextEditor.cpp  TextEditor.hpp  main.cpp
src/Console/: Console.cpp  Console.hpp
src/File/: File.cpp  File.hpp
src/Input/: Input.cpp  Input.hpp
src/KeyActions/: KeyActions.hh
src/SyntaxHighlight/: SyntaxHighlight.cpp  SyntaxHighlight.hpp
